--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -34,7 +34,7 @@ section {
 
 section.workflow-section {
   position: relative;
-  background: #f00072;
+  background: #ff433e;
 }
 
  .subheading {
