--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -31,25 +31,22 @@
 /* ipadpro */
 @media(max-width:1024px)
 {
+    .title {
+        font-size: 35px;
+        font-weight: 700;
+        padding: 10px 0;
+        color: #fff;
+        margin-top: 50px;
+    }
     .workimg-wrapper{
         display: none;
     }
-    .workflowcolumn1 {
-        position: relative;
-        display: flex
-    ;
-        flex-direction: column;
-        height: 100%;
+   
+    .workflowcolumn:before{
+        display: none;
     }
     .workflowcolumn1:before {
-        content: "";
-        position: absolute;
-        right: 49%;
-        top: -5px;
-        width: 2px;
-        height: 28px;
-        background: #fff;
-        transform: translate(-50%, 0);
+       display: none;
     }
 
     .workflowinner-card {
@@ -65,32 +62,192 @@
         flex-direction: column;
         height: 100%;
     }
-    .workflowinner-card:before {
+    .workflow-card:before {
         content: "";
         position: absolute;
-        left: -7px;
-        bottom: -20px;
-        width: 100px;
-        height: 7px;
-        border-bottom: 2px solid #fff;
-        border-bottom-left-radius: 10px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
         mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
     }
-    .workflowinner-card:after {
+
+    .workflow-card1::before {
         content: "";
         position: absolute;
-        right: -8px;
-        bottom: -20px;
-        height: 7px;
-        width: 129px;
-        border-bottom: 2px solid #fff;
-        border-bottom-right-radius: 10px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+    .workflowinner-card1:before {
+     display: none;
+    }
+    .workflowinner-card1:after{
+        display: none; 
+    }
+    .workflowinner-card:before {
+        display:none
+    }
+    .workflowinner-card:after {
+      display:none
+    } 
+    .col-lg-3 {
+        flex: 0 0 auto;
+        width: 33%;
     }
 }
-@media(max-width:768px)
-{
+
+@media(max-width:912px){
+    .col-lg-3 {
+        flex: 0 0 auto;
+        width: 50%;
+    }
+}
+@media(max-width:820px){
+    .title {
+        font-size: 35px;
+        font-weight: 700;
+        padding: 10px 0;
+        color: #fff;
+        margin-top: 50px;
+    }
     .workimg-wrapper{
         display: none;
+    }
+   
+    .workflowcolumn:before{
+        display: none;
+    }
+    .workflowcolumn1:before {
+       display: none;
+    }
+
+    .workflowinner-card {
+        position: relative;
+        display: flex
+    ;
+        flex-direction: column;
+        height: 87%;
+        padding: 0 10px 20px 10px;
+        border-radius: 10px;
+        display: flex
+    ;
+        flex-direction: column;
+        height: 100%;
+    }
+    .workflow-card:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+
+    .workflow-card1::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+    .workflowinner-card1:before {
+     display: none;
+    }
+    .workflowinner-card1:after{
+        display: none; 
+    }
+    .workflowinner-card:before {
+        display:none
+    }
+    .workflowinner-card:after {
+      display:none
+    } 
+}
+
+@media(max-width:768px)
+{
+    .title {
+        font-size: 35px;
+        font-weight: 700;
+        padding: 10px 0;
+        color: #fff;
+        margin-top: 50px;
+    }
+    .workimg-wrapper{
+        display: none;
+    }
+   
+    .workflowcolumn:before{
+        display: none;
+    }
+    .workflowcolumn1:before {
+       display: none;
+    }
+
+    .workflowinner-card {
+        position: relative;
+        display: flex
+    ;
+        flex-direction: column;
+        height: 87%;
+        padding: 0 10px 20px 10px;
+        border-radius: 10px;
+        display: flex
+    ;
+        flex-direction: column;
+        height: 100%;
+    }
+    .workflow-card:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+
+    .workflow-card1::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+    .workflowinner-card1:before {
+     display: none;
+    }
+    .workflowinner-card1:after{
+        display: none; 
+    }
+    .workflowinner-card:before {
+        display:none
+    }
+    .workflowinner-card:after {
+      display:none
     }
 
 
@@ -98,38 +255,21 @@
 
 @media(max-width:430px)
 {
+    .title {
+        font-size: 20px;
+        font-weight: 700;
+        padding: 10px 0;
+        color: #fff;
+        margin-top: 50px;
+    }
     .workimg-wrapper{
         display: none;
     }
-}
-@media(max-width:414px)
-{
-    .workimg-wrapper{
+    .workflowcolumn:before{
         display: none;
-    }
-}
-
-@media(max-width:375px)
-{
-    .workimg-wrapper{
-        display: none;
-    }
-    .workflowcolumn1 {
-        position: relative;
-        display: flex
-    ;
-        flex-direction: column;
-        height: 100%;
     }
     .workflowcolumn1:before {
-        content: "";
-        position: absolute;
-        right: 49%;
-        top: -5px;
-        width: 2px;
-        height: 28px;
-        background: #fff;
-        transform: translate(-50%, 0);
+       display: none;
     }
 
     .workflowinner-card {
@@ -145,26 +285,236 @@
         flex-direction: column;
         height: 100%;
     }
-    .workflowinner-card:before {
+    .workflow-card:before {
         content: "";
         position: absolute;
-        left: -7px;
-        bottom: -20px;
-        width: 100px;
-        height: 7px;
-        border-bottom: 2px solid #fff;
-        border-bottom-left-radius: 10px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
         mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
     }
-    .workflowinner-card:after {
+
+    .workflow-card1::before {
         content: "";
         position: absolute;
-        right: -8px;
-        bottom: -20px;
-        height: 7px;
-        width: 129px;
-        border-bottom: 2px solid #fff;
-        border-bottom-right-radius: 10px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+    .workflowinner-card1:before {
+     display: none;
+    }
+    .workflowinner-card1:after{
+        display: none; 
+    }
+    .workflowinner-card:before {
+        display:none
+    }
+    .workflowinner-card:after {
+      display:none
+    }
+}
+@media(max-width:414px)
+{
+    .title {
+        font-size: 20px;
+        font-weight: 700;
+        padding: 10px 0;
+        color: #fff;
+        margin-top: 50px;
+    }
+    .workimg-wrapper{
+        display: none;
+    }
+    .workflowcolumn:before{
+        display: none;
+    }
+    .workflowcolumn1:before {
+       display: none;
+    }
+
+    .workflowinner-card {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        height: 87%;
+        padding: 0 10px 20px 10px;
+        border-radius: 10px;
+    
+        flex-direction: column;
+        height: 100%;
+    }
+    .workflow-card:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+
+    .workflow-card1::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+    .workflowinner-card1:before {
+     display: none;
+    }
+    .workflowinner-card1:after{
+        display: none; 
+    }
+    .workflowinner-card:before {
+        display:none
+    }
+    .workflowinner-card:after {
+      display:none
+    }
+    
+}
+@media(max-width:412){
+    .col-lg-3 {
+        flex: 0 0 auto;
+        width: 79%;
+    }
+}
+@media(max-width:375px)
+{
+    .title {
+        font-size: 20px;
+        font-weight: 700;
+        padding: 10px 0;
+        color: #fff;
+        margin-top: 50px;
+    }
+    .workimg-wrapper{
+        display: none;
+    }
+    .workflowcolumn1 {
+        position: relative;
+        display: flex
+    ;
+        flex-direction: column;
+        height: 100%;
+    }
+    .workflowcolumn:before{
+        display: none;
+    }
+    .workflowcolumn1:before {
+       display: none;
+    }
+
+    .workflowinner-card {
+        position: relative;
+        display: flex
+    ;
+        flex-direction: column;
+        height: 87%;
+        padding: 0 10px 20px 10px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+    .workflow-card:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+
+    .workflow-card1::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #fff;
+       
+        border-radius: 10px;
+        mask-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 50%, #fff);
+    }
+    .workflowinner-card1:before {
+     display: none;
+    }
+    .workflowinner-card1:after{
+        display: none; 
+    }
+    .workflowinner-card:before {
+        display:none
+    }
+    .workflowinner-card:after {
+      display:none
     }
 } 
  
+@media(max-width:344px){
+    .workflowheader-number1 p {
+        position: absolute;
+        right: 4px;
+        top: 7px;
+        font-size: 36px;
+        
+    }
+    .workflowheader-number2 p {
+        position: absolute;
+        right: 4px;
+        top: 7px;
+        font-size: 36px;
+       
+    }
+
+    .workflow-title h3 {
+        font-size: 14px;
+        margin-top: 42px;
+    }
+    .workflow-title1 h3 {
+        font-size: 14px;
+        margin-top: 42px;
+        margin-left: -13px;
+    }
+    .workflow-paragraphlist p {
+        color: #fff;
+        font-size: 12px;
+        margin-top: 41px;
+        padding: 1px;
+    }
+    .workflow-paragraphlist1 p {
+        color: #fff;
+        font-size: 12px;
+        margin-top: 41px;
+    }
+}
+@media(max-width:320px){
+.title {
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px 0;
+    color: #fff;
+    margin-top: 50px;
+}
+}
